# phyz

./: .gitignore  Cargo.toml  LICENSE  README.md  plan-runner.sh  plan.md
.github/workflows/: release.yml
crates/phyz/: Cargo.toml
crates/phyz-collision/: Cargo.toml
crates/phyz-collision/src/: broad_phase.rs  epa.rs  geometry.rs  gjk.rs  lib.rs
crates/phyz-compile/: Cargo.toml  README.md
crates/phyz-compile/examples/: autodiff.rs  fusion.rs  heat_equation.rs
crates/phyz-compile/src/: builder.rs  compiler.rs  fusion.rs  ir.rs  lib.rs
crates/phyz-compile/tests/: integration.rs
crates/phyz-contact/: Cargo.toml
crates/phyz-contact/src/: lib.rs  solver.rs
crates/phyz-coupling/: Cargo.toml
crates/phyz-coupling/examples/: lorentz_pendulum.rs  multi_solver.rs  subcycling.rs
crates/phyz-coupling/src/: boundary.rs  coupling.rs  lib.rs  lorentz.rs  subcycling.rs
crates/phyz-diff/: Cargo.toml
crates/phyz-diff/benches/: jacobians.rs
crates/phyz-diff/src/: lib.rs  symbolic.rs
crates/phyz-dream/: Cargo.toml
crates/phyz-dream/src/: data.rs  gpu.rs  lib.rs  model.rs  train.rs  validate.rs
crates/phyz-em/: Cargo.toml
crates/phyz-em/src/: grid.rs  lib.rs  solver.rs  source.rs
crates/phyz-format/: Cargo.toml
crates/phyz-format/src/: domain.rs  error.rs  importers.rs  lib.rs  schema.rs
crates/phyz-gpu/: Cargo.toml
crates/phyz-gpu/examples/: parallel_pendula.rs
crates/phyz-gpu/src/: contact_pipeline.rs  gpu_batch_simulator.rs  gpu_simulator.rs  gpu_state.rs  lib.rs  shaders.rs  sparse.rs  sparse_shaders.rs
crates/phyz-gpu/tests/: gpu_vs_cpu.rs
crates/phyz-gravity/: Cargo.toml
crates/phyz-gravity/src/: constant.rs  lib.rs  nbody.rs  particle.rs  pn.rs  poisson.rs
crates/phyz-gravity/tests/: integration_test.rs
crates/phyz-guardian/: Cargo.toml
crates/phyz-guardian/examples/: adaptive_pendulum.rs  conservation_monitor.rs  multi_rate.rs
crates/phyz-guardian/src/: conservation.rs  lib.rs  multi_rate.rs  time_step.rs
crates/phyz-home/: Cargo.toml  Trunk.toml  index.html  input.css
crates/phyz-home/src/: app.rs  auth.rs  cache.rs  coordinator.rs  defrag.rs  dom.rs  lib.rs  realtime.rs  supabase.rs  viz.rs  worker.rs
crates/phyz-home/src/shaders/: grid.wgsl  point.wgsl
crates/phyz-lbm/: Cargo.toml
crates/phyz-lbm/src/: d2q9.rs  d3q19.rs  equation_free.rs  lib.rs
crates/phyz-math/: Cargo.toml
crates/phyz-math/src/: lib.rs  spatial.rs
crates/phyz-md/: Cargo.toml
crates/phyz-md/examples/: argon_fluid.rs  water_molecule.rs
crates/phyz-md/src/: forcefield.rs  lib.rs  neighbor.rs  particle.rs  system.rs
crates/phyz-mjcf/: Cargo.toml
crates/phyz-mjcf/src/: lib.rs  parser.rs
crates/phyz-particle/: Cargo.toml
crates/phyz-particle/src/: lib.rs  material.rs  mpm.rs  particle.rs
crates/phyz-prob/: Cargo.toml
crates/phyz-prob/src/: distribution.rs  ensemble.rs  lib.rs  state.rs  svgd.rs
crates/phyz-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/phyz-py/python/: example_basic.py  example_jax.py
crates/phyz-py/python/tau_gym/: __init__.py
crates/phyz-py/src/: jacobians.rs  lib.rs  mjcf.rs  model.rs  simulator.rs  state.rs
crates/phyz-py/tests/: test_gym_env.py
crates/phyz-qft/: Cargo.toml
crates/phyz-qft/examples/: phase_transition.rs  wilson_loops.rs
crates/phyz-qft/src/: group.rs  lib.rs
crates/phyz-quantum/: Cargo.toml  JOURNAL.md
crates/phyz-quantum/examples/: entanglement_phases.rs  gpu_lanczos_bench.rs  gpu_spectral_scaling.rs  jacobson_continuum.rs  jacobson_equilibrium.rs  jacobson_newton.rs  lanczos_large.rs  matched_topology.rs  quantum_gauge.rs  ryu_takayanagi.rs  seed_work_units.rs  spectral_gap.rs  su2_rt_geometry.rs  su2_spectral_scaling.rs  traced_entropy.rs  two_pentachoron.rs
crates/phyz-quantum/src/: csr.rs  diag.rs  gauss_law.rs  gpu_lanczos.rs  hamiltonian.rs  hilbert.rs  hypercubic.rs  jacobson.rs  lanczos.rs  lib.rs  observables.rs  qubit_map.rs  ryu_takayanagi.rs  stabilizer.rs  su2_quantum.rs  traced.rs  triangulated_torus.rs
crates/phyz-real2sim/: Cargo.toml
crates/phyz-real2sim/src/: lib.rs  observation.rs  optimizer.rs  trajectory_matcher.rs
crates/phyz-regge/: Cargo.toml  JOURNAL.md
crates/phyz-regge/examples/: alpha_scan.rs  de_sitter_symmetry_search.rs  gem_convergence.rs  gem_transformer.rs  kerr_symmetry_search.rs  richardson_search.rs  rn_symmetry_search.rs  su2_symmetry_search.rs
crates/phyz-regge/src/: action.rs  complex.rs  foliation.rs  gauge.rs  gem.rs  geometry.rs  lib.rs  lorentzian.rs  lorentzian_regge.rs  matter.rs  mesh.rs  regge.rs  richardson.rs  search.rs  solver.rs  su2.rs  symmetry.rs  tent_move.rs  transformer.rs  yang_mills.rs
crates/phyz-rigid/: Cargo.toml
crates/phyz-rigid/src/: aba.rs  crba.rs  energy.rs  kinematics.rs  rnea.rs
crates/phyz-wasm/: Cargo.toml
crates/phyz-wasm/src/: lib.rs  quantum.rs
crates/phyz-world/: Cargo.toml
crates/phyz-world/src/: generator.rs  lib.rs  sensor.rs  tendon.rs  trajectory.rs  world.rs
crates/phyz/src/: lib.rs
crates/phyz/src/collision/: broad_phase.rs  epa.rs  geometry.rs  gjk.rs  mod.rs
crates/phyz/src/contact/: material.rs  mod.rs  solver.rs
crates/phyz/src/math/: mod.rs  quaternion.rs  spatial.rs
crates/phyz/src/model/: body.rs  joint.rs  mod.rs  model.rs  state.rs
crates/phyz/src/rigid/: aba.rs  crba.rs  energy.rs  kinematics.rs  rnea.rs
crates/phyz/tests/: contact_stability.rs  integration.rs
crates/tau-em/: Cargo.toml
crates/tau-format/: Cargo.toml
crates/tau-format/src/: coupling.rs  error.rs  importers.rs  lib.rs  schema.rs
crates/tau-gpu/: Cargo.toml
crates/tau-gpu/examples/: parallel_pendula.rs
crates/tau-gpu/src/: gpu_simulator.rs  gpu_state.rs  shaders.rs
crates/tau-gpu/tests/: gpu_vs_cpu.rs
examples/: ant.rs  ball_drop.rs  double_pendulum.rs  ensemble_pendulum.rs  equation_free_demo.rs  granular_column.rs  lbm_cavity.rs  mercury_precession.rs  multi_joint.rs  pendulum.rs  real2sim_pendulum.rs  sphere_in_sand.rs  tendon_demo.rs  training_data.rs  water_container.rs  world_generation.rs
models/: ant.xml  simple_arm.xml
site/: index.html  llms.txt
(+161 files in other folders)
