[workspace]
resolver = "2"
members = [
    "crates/phyz-math",
    "crates/phyz-model",
    "crates/phyz-rigid",
    "crates/phyz-diff",
    "crates/phyz-mjcf",
    "crates/phyz-collision",
    "crates/phyz-contact",
    "crates/phyz-gpu",
    "crates/phyz-particle",
    "crates/phyz-em",
    "crates/phyz-md",
    "crates/phyz-qft",
    "crates/phyz-gravity",
    "crates/phyz-coupling",
    "crates/phyz-guardian",
    "crates/phyz-lbm",
    "crates/phyz-compile",
    "crates/phyz-prob",
    "crates/phyz-world",
    "crates/phyz-real2sim",
    "crates/phyz-format",
    "crates/phyz",
    "crates/phyz-wasm",
    "crates/phyz-regge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phyz-math = { path = "crates/phyz-math" }
phyz-model = { path = "crates/phyz-model" }
phyz-rigid = { path = "crates/phyz-rigid" }
phyz-diff = { path = "crates/phyz-diff" }
phyz-mjcf = { path = "crates/phyz-mjcf" }
phyz-collision = { path = "crates/phyz-collision" }
phyz-contact = { path = "crates/phyz-contact" }
phyz-gpu = { path = "crates/phyz-gpu" }
phyz-particle = { path = "crates/phyz-particle" }
phyz-em = { path = "crates/phyz-em" }
phyz-md = { path = "crates/phyz-md" }
phyz-qft = { path = "crates/phyz-qft" }
phyz-gravity = { path = "crates/phyz-gravity" }
phyz-coupling = { path = "crates/phyz-coupling" }
phyz-guardian = { path = "crates/phyz-guardian" }
phyz-lbm = { path = "crates/phyz-lbm" }
phyz-compile = { path = "crates/phyz-compile" }
phyz-prob = { path = "crates/phyz-prob" }
phyz-world = { path = "crates/phyz-world" }
phyz-real2sim = { path = "crates/phyz-real2sim" }
phyz-format = { path = "crates/phyz-format" }
phyz-regge = { path = "crates/phyz-regge" }
phyz = { path = "crates/phyz" }
