[package]
name = "phyz-compile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JIT compilation of physics kernels to GPU compute shaders for phyz"

[dependencies]
nalgebra.workspace = true
phyz-math.workspace = true
naga = "23.0"
wgpu = "23.0"

[dev-dependencies]
approx = "0.5"
