[package]
name = "phyz-coupling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-scale coupling between different physics solvers for phyz"

[dependencies]
phyz-math = { workspace = true }

[dev-dependencies]
approx = "0.5"
