[package]
name = "phyz-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Analytical Jacobians and differentiation for phyz"

[dependencies]
nalgebra.workspace = true
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
