[package]
name = "phyz-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Analytical Jacobians and differentiation for phyz"

[dependencies]
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
tang.workspace = true
tang-la.workspace = true
tang-expr.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jacobians"
harness = false
