[package]
name = "phyz-em"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FDTD electromagnetic field simulation on Yee grids for phyz"

[dependencies]
phyz-math.workspace = true

[dev-dependencies]
approx = "0.5"
