[package]
name = "phyz-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Universal multi-domain physics file format (.phyz) with MJCF/URDF import"

[dependencies]
serde.workspace = true
serde_json.workspace = true
phyz-math.workspace = true
phyz-model.workspace = true
phyz-mjcf.workspace = true
thiserror = "2.0"

[dev-dependencies]
phyz-rigid.workspace = true
