[package]
name = "phyz-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phyz-math = { workspace = true }
phyz-model = { workspace = true }
phyz-rigid = { workspace = true }
nalgebra = { workspace = true }
wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
futures-intrusive = "0.5"

[dev-dependencies]
approx = "0.5"
