[package]
name = "phyz-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GPU-accelerated batch simulation using wgpu compute shaders for phyz"

[dependencies]
phyz-math = { workspace = true }
phyz-model = { workspace = true }
phyz-rigid = { workspace = true }
nalgebra = { workspace = true }
wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
futures-intrusive = "0.5"

[dev-dependencies]
approx = "0.5"
