[package]
name = "phyz-gravity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layered gravity solver from constant-g to post-Newtonian corrections for phyz"

[dependencies]
phyz-math = { workspace = true }
nalgebra.workspace = true

[[example]]
name = "mercury_precession"
path = "../../examples/mercury_precession.rs"

[dev-dependencies]
