[package]
name = "phyz-guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Adaptive time-stepping and conservation monitoring for phyz"

[dependencies]
phyz-math = { workspace = true }
phyz-model = { workspace = true }
phyz-rigid = { workspace = true }
nalgebra.workspace = true

[[example]]
name = "adaptive_pendulum"
path = "examples/adaptive_pendulum.rs"

[[example]]
name = "conservation_monitor"
path = "examples/conservation_monitor.rs"

[[example]]
name = "multi_rate"
path = "examples/multi_rate.rs"
