[package]
name = "phyz-lbm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lattice Boltzmann Method for emergent fluid dynamics in phyz"

[dependencies]
phyz-math = { workspace = true }
nalgebra.workspace = true

[dev-dependencies]
