[package]
name = "phyz-math"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Spatial algebra and math primitives for phyz physics engine"

[dependencies]
tang.workspace = true
tang-la.workspace = true

[dev-dependencies]
proptest = "1"
