[package]
name = "phyz-md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Molecular dynamics with Lennard-Jones, Coulomb, and bonded potentials for phyz"

[dependencies]
nalgebra.workspace = true
phyz-math.workspace = true

[dev-dependencies]
approx = "0.5"
