[package]
name = "phyz-particle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Material Point Method (MPM) particle simulation for phyz"

[dependencies]
phyz-math.workspace = true
phyz-model.workspace = true
