[package]
name = "phyz-prob"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Probabilistic simulation and uncertainty quantification for phyz"

[dependencies]
nalgebra.workspace = true
phyz-math.workspace = true
phyz-model.workspace = true
rand = "0.8"
rand_distr = "0.4"
