[package]
name = "phyz-qft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lattice gauge theory with Hybrid Monte Carlo sampling for phyz"

[dependencies]
phyz-math.workspace = true
rand = "0.8"

[dev-dependencies]
approx = "0.5"
