[package]
name = "phyz-quantum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hamiltonian lattice gauge theory on simplicial complexes"

[features]
default = ["parallel"]
parallel = ["phyz-regge/parallel"]
gpu = ["dep:phyz-gpu", "dep:wgpu", "dep:bytemuck", "dep:pollster"]

[dependencies]
phyz-regge.workspace = true
phyz-math.workspace = true
num-complex = "0.4"
phyz-gpu = { workspace = true, optional = true }
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = { workspace = true }
ureq = "3"
