[package]
name = "phyz-quantum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hamiltonian lattice gauge theory on simplicial complexes"

[features]
default = ["parallel", "mesh"]
parallel = ["phyz-regge/parallel"]
mesh = ["dep:tang-mesh"]
gpu = ["dep:phyz-gpu", "dep:wgpu", "dep:bytemuck", "dep:pollster"]
wasm-gpu = ["dep:phyz-gpu", "dep:wgpu", "dep:bytemuck"]  # no pollster — async only

[dependencies]
phyz-regge.workspace = true
phyz-math.workspace = true
num-complex = "0.4"
tang.workspace = true
tang-expr.workspace = true
tang-la.workspace = true
tang-mesh = { workspace = true, optional = true }
phyz-gpu = { workspace = true, optional = true }
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = { workspace = true }
ureq = "3"
