[package]
name = "phyz-real2sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Inverse problems and parameter estimation for real-to-sim transfer in phyz"

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
phyz-diff.workspace = true
phyz-format.workspace = true

[[example]]
name = "real2sim_pendulum"
path = "../../examples/real2sim_pendulum.rs"
