[package]
name = "phyz-regge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "4D Regge calculus with U(1) gauge field for Einstein-Maxwell theory"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
phyz-math.workspace = true
rand = "0.8"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx = "0.5"
