[package]
name = "phyz-rigid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Featherstone articulated rigid body dynamics for phyz"

[dependencies]
phyz-math.workspace = true
phyz-model.workspace = true
