[package]
name = "phyz-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM bindings for phyz physics engine"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
phyz-diff.workspace = true
phyz-regge.workspace = true
