[package]
name = "phyz-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM bindings for phyz physics engine"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
webgpu = ["phyz-quantum/wasm-gpu"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { workspace = true }
serde_json = { workspace = true }
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
phyz-diff.workspace = true
phyz-regge.workspace = true
phyz-quantum.workspace = true
