[package]
name = "phyz-world"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural world generation for phyz physics engine"

[dependencies]
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
phyz-math.workspace = true
phyz-model.workspace = true
