[package]
name = "phyz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-physics differentiable simulation engine"

[dependencies]
nalgebra.workspace = true
rand = "0.8"
rand_distr = "0.4"
phyz-math.workspace = true
phyz-model.workspace = true
phyz-rigid.workspace = true
phyz-diff.workspace = true
phyz-mjcf.workspace = true
phyz-collision.workspace = true
phyz-contact.workspace = true
phyz-particle.workspace = true
phyz-lbm.workspace = true
phyz-em.workspace = true
phyz-md.workspace = true
phyz-qft.workspace = true
phyz-gravity.workspace = true
phyz-coupling.workspace = true
phyz-guardian.workspace = true
phyz-gpu.workspace = true
phyz-compile.workspace = true
phyz-real2sim.workspace = true
phyz-format.workspace = true
phyz-prob.workspace = true
phyz-world.workspace = true

[dev-dependencies]
approx = "0.5"

[[example]]
name = "pendulum"
path = "../../examples/pendulum.rs"

[[example]]
name = "double_pendulum"
path = "../../examples/double_pendulum.rs"

[[example]]
name = "multi_joint"
path = "../../examples/multi_joint.rs"

[[example]]
name = "ant"
path = "../../examples/ant.rs"

[[example]]
name = "ball_drop"
path = "../../examples/ball_drop.rs"

[[example]]
name = "granular_column"
path = "../../examples/granular_column.rs"

[[example]]
name = "water_container"
path = "../../examples/water_container.rs"

[[example]]
name = "sphere_in_sand"
path = "../../examples/sphere_in_sand.rs"

[[example]]
name = "world_generation"
path = "../../examples/world_generation.rs"

[[example]]
name = "training_data"
path = "../../examples/training_data.rs"

[[example]]
name = "tendon_demo"
path = "../../examples/tendon_demo.rs"

[[example]]
name = "lbm_cavity"
path = "../../examples/lbm_cavity.rs"

[[example]]
name = "equation_free_demo"
path = "../../examples/equation_free_demo.rs"

[[example]]
name = "ensemble_pendulum"
path = "../../examples/ensemble_pendulum.rs"
