[package]
name = "phyz"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ecto/phyz"
homepage = "https://phyz.dev"
description = "Multi-physics differentiable simulation engine"

[dependencies]
tang = { version = "0.2.0", path = "../../../tang/crates/tang", features = ["std", "la"] }

[dev-dependencies]
approx = "0.5"
