[package]
name = "tau-format"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-math.workspace = true
tau-model.workspace = true
tau-mjcf.workspace = true
thiserror = "2.0"

[dev-dependencies]
tau-rigid.workspace = true
